Improved real tape loading: acceleration is disabled by default, added setting to save configuration

Fixed Pentagon border: now ukflag demo is perfect
Fixed Spectrum 128k machines border: now ula128, scroll2017 demos are perfect
Fixed f_seek call on esxdos handler
Fixed segfault error when using breakpoints like peek/opcode in config file
Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
Fixed average cpu statistics when footer is not enabled
Fixed kempston mouse emulation on Next machine: wheel bits always return 0
Fixed bug extracting PAWS words when a word is a pronoun
Fixed undocumented opcode ED76: I had IM0 but it's IM1
Fixed loading and saving +3 .z80 snapshots
Fixed placing menu windows when using zx desktop and machines TSConf, TBBlue, CPC and QL
Fixed bug loading .sna files when rom 1 paged in
Fixed bug on return flags from tape load trap. It only affected Rocman game and enabling "any flag loading" setting
Fixed setting a configured memory breakpoint like this "--set-mem-breakpoint 0000H 2" which was fired on startup
Fixed opening the menu on stdout driver on the first start of ZEsarUX

Fixed Accessibility bugs: 
-now menu settings (anything between square brackets []) are played at the end of the menu line
-now menu settings ([ ] and [X]) are played as "enabled"/"disabled"

Some other minor bugfixes and improvements



Version 8.0. 19 July 2019 - World Destruction edition

Improved menu interface:
-Program Window can be extended horizontally and have a right region to place menu zxvision windows (called ZX Desktop)
-Draw engine: now it allows transparency
-Menu windows can be placed and resized to the whole program window
-Some windows geometry (position, size) are saved in the configuration
-Hotkeys now show right capitalization (lowercase or uppercase)
-Edit box now has a key to delete all input (cursor down)
-Edit box can now move cursor left and right and write text in the middle